--- a/.github/workflows/vale.yaml
+++ b/.github/workflows/vale.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Vale-Linting
+name: Vale-Linting-Assignment
 
 # Event to trigger when the action is run
 
@@ -23,5 +23,4 @@ jobs:
       - name: Run Vale
         uses: errata-ai/vale-action@v2.1.1
         with:
-            version: '2.17.0'
             reporter: 'github-pr-check'
