--- a/.github/workflows/vale.yaml
+++ b/.github/workflows/vale.yaml
@@ -23,4 +23,5 @@ jobs:
       - name: Run Vale
         uses: errata-ai/vale-action@v2.1.1
         with:
-            reporter: 'github-pr-check'
+          # The path to the directory or file you want to lint
+          path: './docs'
