--- a/.github/workflows/vale.yaml
+++ b/.github/workflows/vale.yaml
@@ -24,4 +24,4 @@ jobs:
         uses: errata-ai/vale-action@v2.1.1
         with:
           # The path to the directory or file you want to lint
-          path: './docs'
+          fail_on_error: false
