--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "dev": "docusaurus start",
-    "generate:openapi": "docusaurus gen-api-docs api"
+    "dev": "docusaurus start"
   },
   "dependencies": {
     "@docusaurus/core": "^3.8.0",
@@ -21,8 +20,6 @@
     "@docusaurus/theme-classic": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "docusaurus-plugin-openapi-docs": "^4.5.1",
-    "docusaurus-theme-openapi-docs": "^4.5.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
