--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.8.0",
+    "@docusaurus/plugin-content-blog": "^3.8.1",
     "@docusaurus/preset-classic": "^3.8.0",
     "@docusaurus/theme-classic": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
