--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,23 +1,11 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
+mariam:
+  name: Mariam Yusuff
+  title: Technical Writer & Documentation Specialist
+  url: https://linkedin.com/in/yusuff-mariam
   image_url: https://github.com/yangshun.png
+  email: mariamyusuff0000@gmail.com
+  socials:
+    github: MwithHeart
+    linkedin: yusuff-mariam
   page: true
-  socials:
-    x: yangshunz
-    github: yangshun
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
