Corrected error with tags in blog pages

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,11 +1,5 @@
 mariam:
   name: Mariam Yusuff
-  title: Technical Writer & Documentation Specialist
+  title: Technical Writer
   url: https://linkedin.com/in/yusuff-mariam
-  image_url: https://github.com/yangshun.png
-  email: mariamyusuff0000@gmail.com
-  socials:
-    github: MwithHeart
-    linkedin: yusuff-mariam
-  page: true
-
+  image_url: https://avatars.githubusercontent.com/u/12345678?v=4 
