Edited the workflow files

--- a/.github/workflows/vale.yaml
+++ b/.github/workflows/vale.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Vale
         uses: errata-ai/vale-action@v2
         with:
-          files: .
+          files: '**/*.md'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
